--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -1608,5 +1608,108 @@ stories:
   state: Massachusetts
   domain: http://www.mvtimes.com
   link: https://www.mvtimes.com/2019/12/26/first-day-brickyard/
+images:
+- name: la-muse-grain-ship-docking-grass.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-grain-ship-docking-grass.jpg
+- name: subway-subway-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-bright-sand.jpg
+- name: ellis-island-ellisisland-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-purp-paper.jpg
+- name: 35201856153_61bc075e4b-udnie.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-udnie.jpg
+- name: berlinwall-DSC-0084-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-crabapple.jpg
+- name: san-francisco-street-view-san-francisco-street-view-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-gred-mash.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
+- name: power-lines-power-lines-empty-space-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-satan-red.jpg
+- name: copper-circuit-piano-in-street-good.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-piano-in-street-good.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-rain.jpg
+- name: paris-paris-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dark-dali.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-post-modern.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-smooth-ride.jpg
+- name: legal-statue-legalstatue-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-plentiful.jpg
+- name: yosemite-yosemite-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-deep-connections.jpg
+- name: status-berlin-status-berlin-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-attack-planes.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-attack-planes.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-attack-planes.png
+- name: downtheline-downtheline-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-kand-two.jpg
+- name: nazi-invasion-surveillance-3-camers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-surveillance-3-camers.jpg
+- name: christianity-christianity-under-construction-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-colorful-blocks.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-neo-instinct.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-neo-instinct.JPG
+- name: mediterranean-mediterranean-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-atari-asteroids.jpg
+- name: bf-skinner-san-francisco-skyline-smoke.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-san-francisco-skyline-smoke.jpg
+- name: power-lines-power-lines-empty-space-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-china-prop.jpg
+- name: windowmountain-window-mountain-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-deep-connections.jpg
+- name: flower-barbed-wire-flower-barbed-wire-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-monet-one.jpg
+- name: curtain-curtain-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-purp-paper.jpg
+- name: nazi-invasion-DSC_0036.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0036.jpg
+- name: yosemite-yosemite-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-creativity.jpg
+- name: aws-s3-stories-statue-face-open-mouth-copper-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-copper-circuit.png
+- name: flower-barbed-wire-flower-barbed-wire-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-mucha-mult.jpg
+- name: copper-circuit-container-ship-in-seattle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-container-ship-in-seattle.jpg
+- name: razorcliff-razorcliff-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dali-two.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-alberto-giacometti.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-alberto-giacometti.JPG
+- name: nazi-invasion-street-car-san-francisco.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-street-car-san-francisco.jpg
+- name: mosaic-face-mosaic-face-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-internet-numbers.jpg
+- name: school-clouds-church-clouds-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-oily-mcoilface.jpg
+- name: wind-mills-windmills-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-matrix.jpg
+- name: bf-skinner-jesus-in-old-rock-church.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-jesus-in-old-rock-church.jpg
+- name: paris-paris-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-atari-asteroids.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-matrix.jpg
+- name: braceros-domingo-ulloa-dandelions-in-rocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-dandelions-in-rocks.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
+- name: old-gas-pumps-oldgaspumps-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-ww2-color.jpg
+- name: powerlines-power-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-graham-sutherland.jpg
+- name: bf-skinner-old-building-and-cars_36680898846_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-building-and-cars_36680898846_o.jpg
+- name: subway-subway-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dali-three.jpg
+- name: braceros-domingo-ulloa-old-building-barcelona-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-building-barcelona-waterfront.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-free-woman.jpg
+- name: san-francisco-street-view-san-francisco-street-view-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-really-hot.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-graham-sutherland.jpg
 ---
 Christmas Festivities Begin In West Bank Town Of Bethlehem.&nbsp;Like Us On Facebook.&nbsp;Moroccan YouTuber Sentenced To Prison, Journalist Detained.&nbsp;Chow, Babys Christmas Card.&nbsp;Woman Walks Up And Down Jefferson Looking For Wedding Ring Lost At Trenton Parade.&nbsp;Powerful Storm Pounds Southern California With Rain, Snow.&nbsp;Pickaway County Recylcing Locations.&nbsp;QUESTuary Is Coming In January.&nbsp;
